# simple-log-parser

./: .gitignore  LICENSE  README.md  body.py  display.py  helpers.py  ioc_detector.py  ioc_extractor.py  log_detector.py  parse.py  pyproject.toml  requirements..txt
parsers/: apache.py  auth.py  windows_event.py
tests/: test_log_detector.py
tests/sample_logs/: windows_mixed_events.xml  windows_security_failed_logins.xml
